--- a/index.html
+++ b/index.html
@@ -36,42 +36,42 @@
         <section class="last-article-preview">
             <ul class="last-article-preview-list">
                 <li class="last-article-preview-list-items">
-                    <img src="/img/image-1.jpg" alt="girl dance in festival" width="420" height="280">
+                    <img src="./img/image-1.jpg" alt="girl dance in festival" width="420" height="280">
                     <p class="group-of-articles">lifestyle</p>
                     <h2>More than just a music festival</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
                     </p>
                 </li>
                 <li class="last-article-preview-list-items">
-                    <img src="/img/image-2.jpg" alt="the cup of coffe in hand" width="419" height="280">
+                    <img src="./img/image-2.jpg" alt="the cup of coffe in hand" width="419" height="280">
                     <p class="group-of-articles">lifestyle</p>
                     <h2>Life testes better with coffe</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
                     </p>
                 </li>
                 <li class="last-article-preview-list-items">
-                    <img src="/img/image-3.jpg" alt="The girls are looking at the bridge" width="420" height="280">
+                    <img src="./img/image-3.jpg" alt="The girls are looking at the bridge" width="420" height="280">
                     <p class="group-of-articles">photodiary</p>
                     <h2>Amarican dream</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
                     </p>
                 </li>
                 <li class="last-article-preview-list-items">
-                    <img src="/img/image-4.jpg" alt="guy looking at the alps" width="419" height="280">
+                    <img src="./img/image-4.jpg" alt="guy looking at the alps" width="419" height="280">
                     <p class="group-of-articles">photodiary</p>
                     <h2>A day exploring the Alps</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
                     </p>
                 </li>
                 <li class="last-article-preview-list-items">
-                    <img src="/img/image-5.jpg" alt="the girl looking at a road and listin music" width="420" height="280">
+                    <img src="./img/image-5.jpg" alt="the girl looking at a road and listin music" width="420" height="280">
                     <p class="group-of-articles">lifestyle</p>
                     <h2>Top 10 song for ranning</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
                     </p>
                 </li>
                 <li class="last-article-preview-list-items">
-                    <img src="/img/image-6.jpg" alt="the winter road" width="419" height="280">
+                    <img src="./img/image-6.jpg" alt="the winter road" width="419" height="280">
                     <p class="group-of-articles">lifestyle</p>
                     <h2>Cold winter days</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
