--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="wraper">
+    <div class="wrapper">
     <header class="main-header">
         <nav class="main-nav">
             <ul class="main-menu">
