--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="./img/image-4.jpg" alt="guy looking at the alps" width="419" height="280">
                     <p class="group-of-articles">photodiary</p>
                     <h2>A day exploring the Alps</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
                     </p>
                 </li>
                 <li class="last-article-preview-list-items">
